[package]
name = "sandblast"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A Rust library that smooths out the rough edges of compute shader development with wgpu."
repository = "https://github.com/ajensen1234/sandblast"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version= "1.15.0", features= ["derive"]}
wgpu = "0.19.4"
pollster = "0.2.5"
nalgebra = {version = "0.32.4", features = ["rand"]}
regex = "1"
futures-intrusive = "0.4"

[lib]
name = "sandblast"
path = "src/lib.rs"
